crates/ports/tests/ui/vectordb_lend_external_impl.stderr
error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:21:5
   |
21 | /     fn create_collection(
22 | |         &self,
23 | |         _ctx: &RequestContext,
24 | |         _collection_name: CollectionName,
25 | |         _dimension: u32,
26 | |         _description: Option<Box<str>>,
27 | |     ) -> Self::Future<'_, ()> {
   | |_____________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:31:5
   |
31 | /     fn create_hybrid_collection(
32 | |         &self,
33 | |         _ctx: &RequestContext,
34 | |         _collection_name: CollectionName,
35 | |         _dimension: u32,
36 | |         _description: Option<Box<str>>,
37 | |     ) -> Self::Future<'_, ()> {
   | |_____________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:41:5
   |
41 | /     fn drop_collection(
42 | |         &self,
43 | |         _ctx: &RequestContext,
44 | |         _collection_name: CollectionName,
45 | |     ) -> Self::Future<'_, ()> {
   | |_____________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:49:5
   |
49 | /     fn has_collection(
50 | |         &self,
51 | |         _ctx: &RequestContext,
52 | |         _collection_name: CollectionName,
53 | |     ) -> Self::Future<'_, bool> {
   | |_______________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:57:5
   |
57 |     fn list_collections(&self, _ctx: &RequestContext) -> Self::Future<'_, Vec<CollectionName>> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:61:5
   |
61 | /     fn insert(
62 | |         &self,
63 | |         _ctx: &RequestContext,
64 | |         _collection_name: CollectionName,
65 | |         _documents: Vec<VectorDocumentForInsert>,
66 | |     ) -> Self::Future<'_, ()> {
   | |_____________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:70:5
   |
70 | /     fn insert_hybrid(
71 | |         &self,
72 | |         _ctx: &RequestContext,
73 | |         _collection_name: CollectionName,
74 | |         _documents: Vec<VectorDocumentForInsert>,
75 | |     ) -> Self::Future<'_, ()> {
   | |_____________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:79:5
   |
79 | /     fn flush(
80 | |         &self,
81 | |         _ctx: &RequestContext,
82 | |         _collection_name: CollectionName,
83 | |     ) -> Self::Future<'_, ()> {
   | |_____________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:87:5
   |
87 |     fn search(&self, _ctx: &RequestContext, _request: VectorSearchRequest) -> Self::Future<'_, VectorSearchResponse> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:91:5
   |
91 | /     fn hybrid_search(
92 | |         &self,
93 | |         _ctx: &RequestContext,
94 | |         _request: HybridSearchBatchRequest,
95 | |     ) -> Self::Future<'_, Vec<HybridSearchResult>> {
   | |__________________________________________________^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
   --> tests/ui/vectordb_lend_external_impl.rs:99:5
    |
 99 | /     fn delete(
100 | |         &self,
101 | |         _ctx: &RequestContext,
102 | |         _collection_name: CollectionName,
103 | |         _ids: Vec<Box<str>>,
104 | |     ) -> Self::Future<'_, ()> {
    | |_____________________________^ unsatisfied trait bound
    |
help: the trait `VectorDbPort` is not implemented for `External`
   --> tests/ui/vectordb_lend_external_impl.rs:8:1
    |
  8 | struct External;
    | ^^^^^^^^^^^^^^^
    = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
   --> src/vectordb.rs
    |
    | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
    |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
    = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
    = help: the following type implements the trait:
              T

error[E0277]: the trait bound `External: VectorDbPort` is not satisfied
   --> tests/ui/vectordb_lend_external_impl.rs:108:5
    |
108 | /     fn query(
109 | |         &self,
110 | |         _ctx: &RequestContext,
111 | |         _collection_name: CollectionName,
...   |
114 | |         _limit: Option<u32>,
115 | |     ) -> Self::Future<'_, Vec<VectorDbRow>> {
    | |___________________________________________^ unsatisfied trait bound
    |
help: the trait `VectorDbPort` is not implemented for `External`
   --> tests/ui/vectordb_lend_external_impl.rs:8:1
    |
  8 | struct External;
    | ^^^^^^^^^^^^^^^
    = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
   --> src/vectordb.rs
    |
    | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
    |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
    = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
    = help: the following type implements the trait:
              T

error[E0277]: the trait bound `External: semantic_code_ports::vectordb::sealed::Sealed` is not satisfied
  --> tests/ui/vectordb_lend_external_impl.rs:10:27
   |
10 | impl VectorDbPortLend for External {
   |                           ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `VectorDbPort` is not implemented for `External`
  --> tests/ui/vectordb_lend_external_impl.rs:8:1
   |
 8 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::vectordb::sealed::Sealed`
note: required by a bound in `VectorDbPortLend`
  --> src/vectordb.rs
   |
   | pub trait VectorDbPortLend: sealed::Sealed + Send + Sync {
   |                             ^^^^^^^^^^^^^^ required by this bound in `VectorDbPortLend`
   = note: `VectorDbPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::vectordb::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T
